src/style.css
body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
}

section {
    background-color: white;
}

.hero {
    background-color: #395144;
    height: 100vh;
    color: white;
    font-size: 40px;
}

footer {
    height: 500px;
    background-color: black;
    color: white;
    text-align: center;
    padding: 80px;
}

nav {
    display: flex;
    justify-content: space-between;
}

ul {
    display: flex;
    list-style-type: none;
    width: 750px;
    justify-content: space-around;
    font-size: 30px;
}

ul.mostrar{
    display: block;
}

li {
    text-decoration: none;
}

h1 {
    font-size: 40px;
    margin: 0;
}

p{
    margin: 0;
}

.hero-text {
    margin-left: 40px;
    font-weight: 600;
    margin-bottom: 300px;
}

.hero-area{
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
}

.button {
    width: 200px;
    height: 55px;
    border-radius: 40px;
    text-align: center;
    padding-top: 5px;
    background-color: coral;
    cursor: pointer;
}

.button:hover{
    background-color: #ef744b;
}

.button:active{
    background-color: gray;
    color: #808080;
}

.socials{
    padding-bottom: 300px;
}

.social{
    margin: 10px;

}

.idioma{
    margin-top: 40px;
}

.sub-section{
    display: flex;
    justify-content: space-around;
    padding: 80px;
}

.sub-section-alternative{
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 80px;
}

h2{
    font-size: 50px;

}

.headshot{
    
    width: 400px;
    border-radius: 20px;
    padding-top: 50px;
}

.tarjeta-proyecto{
    width: 400px;
    height: 300px;
    box-shadow: 5px 5px 20px rgba(128, 128, 128, 0.527);
    margin: 10px;
}

.tarjeta-proyecto img{
    width: 99%;
}


.github{
    width: 97%;
}

.contenedor-proyectos{
    display: flex;
    justify-content: space-around;
}

@media only screen and (max-width: 1000px){
    .contenedor-proyectos{
        display: flex;
        flex-wrap: wrap;
    }

    .tarjeta-proyecto{
        margin: 30px;
    }
}


a{
    text-decoration: none;
    color: white;
}


/* Hamburguesa */
.hamburger{
    display: none;
}

.hamburger:focus{
    outline: 0;
}

@media only screen and (max-width: 1000px){
    .hamburger{
        display: block;
        border: 0;
        background-color: transparent;
        color: white;
        font-size: 30px;
        margin: 20px;
        align-self: flex-end;
    }

    ul{
        display: none;
        background-color: #4E6C50;
    }

    nav{
        display: flex;
        flex-direction: column-reverse;
        background-color: #4E6C50;
    }



}

/* Animacion */

:root {
    --bg-color: #395144;
    --typewriterSpeed: 2s;
    --typewriterCharacters: 24;
}

.animacion body {
    margin: 0;
    font-family: 'Poppins', sans-serif;
    min-height: 100vh;
    display: grid;
    place-content: center;
    text-align: center;
    background: var(--bg-color);
}

.animacion h1 {
    font-size: clamp(1rem, 3vw + 1rem, 4rem);
    position: relative;
    font-family: 'Poppins', sans-serif;
    position: relative;
    width: max-content;
}

.animacion h1::before,
.animacion h1::after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.animacion h1::before {
    background: var(--bg-color);
    animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
}

.animacion h1::after {
    width: 0.125em;
    background: black;
    animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards,
        blink 750ms steps(var(--typewriterCharacters)) infinite;
}

.animacion .subtitle {
    color: rgb(255, 255, 255);
    font-size: 2rem;
    font-weight: 400;
    opacity: 0;
    transform: translateY(3rem);
    animation: fadeInUp 1s ease calc(var(--typewriterSpeed) + 1s) forwards;
}

@keyframes typewriter {
    to {
        left: 100%;
    }
}

@keyframes blink {
    to {
        background: transparent;
    }
}

@keyframes fadeInUp {
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

